--- a/templates/index.html
+++ b/templates/index.html
@@ -1,21 +1,5 @@
 {% extends "base.html" %}
 
 {% block content %}
-{% for item in jobs%}
-<div class="col-md6 border rounded">
-    <h2>{{item.title}}</h2>
-    <div>
-        {{item.content}}
-    </div>
-    <div>
-        Автор - {{item.user.name}}, Дата написания - {{item.created_date}}
-    </div>
-    {% if current_user.is_authenticated and current_user == item.user %}
-    <div>
-        <a href="/jobs/{{ item.id }}" class="btn btn-warning">Изменить</a>
-        <a href="/jobs_delete/{{ item.id }}" class="btn btn-danger">Удалить</a>
-    </div>
-{% endif %}
-</div>
-{% endfor %}
+{% include "jobs_list.html"%}
 {% endblock %}
