--- a/templates/jobs_list.html
+++ b/templates/jobs_list.html
@@ -1,10 +1,26 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>$Title$</title>
-</head>
-<body>
-$END$
-</body>
-</html>
+{% for item in jobs%}
+<br>
+<div class="col-md6 border rounded" style="padding: 1px 5px 5px 5px">
+    <h3>{{item.title}}</h3>
+    <h5>
+        {{item.content}}
+    </h5>
+    <div>
+        <a>Автор: </a><a href="/user/{{ item.user.id }}">{{ item.user.name }}</a><br>
+        Дата написания: {{item.created_date}}<br>
+        Оплата: {{item.payment}} ₽
+    </div>
+    <br>
+    {% if current_user == item.user %}
+    <div>
+        <a href="/jobs/{{ item.id }}" class="btn btn-warning">Изменить</a>
+        <a href="/jobs_delete/{{ item.id }}" class="btn btn-danger">Удалить</a>
+    </div>
+    {% elif current_user.is_authenticated %}
+    <div>
+        <a href="/jobs/{{ item.id }}" class="btn btn-success">Выполняю!</a>
+        <a href="/jobs_delete/{{ item.id }}" class="btn btn-default">Хочу выполнить</a>
+    </div>
+    {% endif %}
+    </div>
+{% endfor %}
