added cancel and balance

--- a/templates/base.html
+++ b/templates/base.html
@@ -29,7 +29,7 @@
             <a style="background: #a4d433" class='btn btn-default' href="">Категории</a>
             <a style="background: #c4ca76" class='btn btn-default' href="">Мои работы</a>
             <a style="background: #c4ca76" class='btn btn-default' href="">Отложенные</a>
-            <a style="background: #aca16f" class='btn btn-default' href="">Заявки</a>
+            <a style="background: #aca16f" class='btn btn-default' href="/my_requests">Заявки</a>
             <a style="background: #aaaaaa" class='btn btn-default' href='/user/{{ current_user.id }}'>Профиль</a>
             <a style="background: #ca7676" class='btn btn-default' href="/logout">Выйти</a>
         {% else %}
