added endorse function

--- a/templates/requests.html
+++ b/templates/requests.html
@@ -15,7 +15,7 @@
     </div>
     <br>
     <div>
-        <a href="/requests_endorse/{{ item.id }}{{ item.request }}" class="btn btn-warning">Одобрить</a>
+        <a href="/requests_endorse/{{ item.id }}{{ item.request }}" class="btn btn-success">Одобрить</a>
         <a href="/requests_cancel/{{ item.id }}" class="btn btn-danger">Отклонить</a>
     </div>
 
