--- a/templates/requests.html
+++ b/templates/requests.html
@@ -21,7 +21,7 @@
     </div>
 
 {% endfor %}
-    {% else %}
-    <h4>Похожу, что вам еще не поступали запросы</h4>
-    {% endif $}
+{% else %}
+    <h4>Похожe, что вам еще не поступали запросы</h4>
+{% endif %}
 {% endblock %}
