added some fixes

--- a/templates/forum.html
+++ b/templates/forum.html
@@ -1,6 +1,7 @@
 {% extends "base.html" %}
 
 {% block content %}
+<h2>{{title}}:</h2>
 {% for item in themes %}
 <br>
 <div class="col-md6 border rounded" style="padding: 1px 5px 5px 5px">
