--- a/templates/jobs_list.html
+++ b/templates/jobs_list.html
@@ -16,7 +16,7 @@
         <a href="/jobs/{{ item.id }}" class="btn btn-warning">Изменить</a>
         <a href="/jobs_delete/{{ item.id }}" class="btn btn-danger">Удалить</a>
     </div>
-    {% elif request.path == "/defers"%}
+    {% elif title == 'Отложенные' %}
     <div>
         <a href="/requests/{{ item.id }}" class="btn btn-success">Выполняю!</a>
         <a href="/defers_delete/{{ item.id }}" class="btn btn-war">Не хочу выполнять</a>
