--- a/templates/base.html
+++ b/templates/base.html
@@ -17,7 +17,7 @@
         <a href="/"><b><font size="6" color="cc0605">Red</font><font color="000000" size="6">Work</font></b></a>
 
                 <a style="border: 2px double lightgray" class='btn btn-default' href=""><font size="4">Услуги</font></a>
-                <a style="border: 2px double lightgray" class='btn btn-default' href=""><font size="4">Работы</font></a>
+                <a style="border: 2px double lightgray" class='btn btn-default' href=""><font size="4">О нас</font></a>
                 <a style="border: 2px double lightgray" class='btn btn-default' href="/forum"><font size="4">Форум</font></a>
                 <a style="border: 2px double lightgray" class='btn btn-default' href="/help"><font size="4">Помощь</font></a>
 
