edit job's editor, add avatar checker (.jpg, .png, .jpeg)

--- a/templates/register.html
+++ b/templates/register.html
@@ -50,7 +50,8 @@
             </p>
         {% endfor %}
     </p>
-        <input type="file" name="file">
+        <input type="file" name="ava">
+    <br>
     <p>{{ form.submit(type="submit", class="btn btn-primary") }}</p>
     {{message}}
 </form>
