added extra profile information

--- a/templates/profile_info.html
+++ b/templates/profile_info.html
@@ -5,7 +5,7 @@
 <hr>
 <table>
     <tr valign="top">
-        {% if user.name %}
+        {% if user.is_ava == 1 %}
         <td><img src="../static/img/{{ user.name }}.png"></td>
         {% else %}
         <td><img src="{{ user.avatar(128)}}"></td>
@@ -22,12 +22,17 @@
 </table>
 <hr>
 <nav class="navbar">
-    <a style="background: #a4d433" class='btn' href="/user/{{ current_user.id }}/complete">Выполненные</a>
-    <a style="background: #c4ca76" class='btn' href="/user/{{ current_user.id }}/jobs">Добавленные</a>
-    <a style="background: #aca16f" class='btn' href="/user/{{ current_user.id }}/reviews">Отзывы</a>
+    <a style="background: #808080" class='btn' href="/user/{{ current_user.id }}/complete">Выполненные</a>
+    <a style="background: #808080" class='btn' href="/user/{{ current_user.id }}/jobs">Добавленные</a>
+    <a style="background: #808080" class='btn' href="/user/{{ current_user.id }}/reviews">Отзывы</a>
 </nav>
 <br>
-<h4>Работы пользователя:</h4>
+{% if title == 'complete'%}
+<h4>Выполненные работы:</h4>
+<br>
+{% elif title == 'jobs'%}
+<h4>Добавленные работы:</h4>
+{% endif %}
 <br>
 {% if jobs %}
     {% include "jobs_list.html" %}
